Ajustes no título e favicon da página.

--- a/app/templates/theme3/libraries.html
+++ b/app/templates/theme3/libraries.html
@@ -32,3 +32,6 @@
     
     <!-- Application custom CSS -->
     <link href="app/templates/{template}/application.css?appver=750" rel="stylesheet" type="text/css" media="screen">
+    
+    <!-- Icone do favicon -->
+    <link rel="icon" href="app/images/brasão 7 gess.png" type="image/x-icon" />
