--- a/app/templates/theme3/login.html
+++ b/app/templates/theme3/login.html
@@ -27,9 +27,9 @@
     });
     </script>
   </head>
-  <body style="background-image: url('app/images/fiern-capa.jpg');background-position: center center;background-size: cover;" >
+  <body style="background-image: url('app/images/alcateia lobo guara feira de artesanato capa.jpg');background-position: center center;background-size: cover;backdrop-filter: grayscale(1);" >
         <nav class="main-header navbar navbar-light bg-light fixed-top" role="navigation" style="margin-bottom: 0; text-align:center">
-            <a class="navbar-brand" ><img src="app/images/senai.png"></a>
+            <a class="navbar-brand" ><img src="app/images/brasão 7 gess.png" style="width: 4rem"></a>
         </nav>
         
         <div id="wrapper" style="width:90%;margin:auto;margin-top:200px">
