Inclusão e ajuste da logo no layout de tela.

--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -62,9 +62,15 @@
             __adianti_set_debug({debug});
         });
     </script>
+
+    <style>
+      img {
+	      width: 10rem;
+      }
+    </style>
   </head>
   
-  <body class="hold-transition skin-blue sidebar-mini">
+  <body class="hold-transition skin-red-light sidebar-mini">
     <div class="wrapper">
 
       <header class="main-header">
@@ -73,7 +79,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>SEN</b></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><img src="app/images/logo_senai.png"></span>
+          <span class="logo-lg"><img src="app/images/logo 7 gess.png" ></span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
