--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -64,20 +64,25 @@
     </script>
 
     <style>
-      img {
+      .logo-lg img {
 	      width: 10rem;
+      }
+
+      .logo-mini img{
+        width: 3rem;
       }
     </style>
   </head>
   
-  <body class="hold-transition skin-red-light sidebar-mini">
+  <body class="hold-transition skin-green-light sidebar-mini">
     <div class="wrapper">
 
       <header class="main-header">
         <!-- Logo -->
         <a href="http://www.adianti.com.br/framework" target="newwindow" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>SEN</b></span>
+          <!--<span class="logo-mini"><b>SEN</b></span>-->
+          <span class="logo-mini"><img src="app/images/brasão 7 gess.png" ></span>
           <!-- logo for regular state and mobile devices -->
           <span class="logo-lg"><img src="app/images/logo 7 gess.png" ></span>
         </a>
